--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google/genai": "*",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^12.8.0",
     "git": "^0.1.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
