--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "taksi-yonetim",
   "private": true,
-  "version": "2.0.0",
+  "version": "2.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
